My First commit.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+      <link rel="stylesheet" href="css/main.css">
+      <script src="https://kit.fontawesome.com/9417c21963.js" crossorigin="anonymous"></script>
+    <title>Curriculum Vitae</title>
 </head>
 <body>
-    
+    <main class="main">
+        <div class="column1">
+            <div class="profile">
+                <div class="profile--top">
+                    <div class="img">
+                        <img src="images/dp2-darker.png" alt="myPic">
+                    </div>
+                    <div class="title">
+                        <h1><span>JOSHUA</span> <span>LIMPIADO</span></h1>
+                        <h3><span>WEB</span> <span>DEVELOPER</span></h3>
+                    </div>
+                </div>
+                <div class="contacts">
+                    <h1><i class="fas fa-address-book"></i> CONTACTS</h1>
+                    <ul>
+                        <li><i class="fas fa-phone"></i> <a href="tel:+639283916354">+639 2 8391 6354</a></li>
+                        <li><i class="fas fa-at"></i> <a href="mailto:limpiado.joshua.5@gmail.com">jianlimpiado@gmail.com</a></li>
+                        <li><i class="fas fa-location-arrow"></i> Sta. Mesa, Metro Manila, Phillippines</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <h1><i class="fas fa-cogs"></i> SKILLS</h1>
+                    <ul>
+                        <li>Web Design</li>
+                        <li>Computer Programming</li>
+                    </ul>
+                </div>
+                <div class="languages">
+                    <h1><i class="fas fa-language"></i> LANGUAGES</h1>
+                    <ul>
+                        <li>Filipino</li>
+                        <li>English</li>
+                    </ul>
+                </div>
+                <div class="hobbies">
+                    
+                </div>
+            </div>
+        </div>
+        <div class="column2">
+            <div class="about box">
+                <h1><i class="fas fa-user"></i> ABOUT ME</h1>
+                    <p>
+                        I am Joshua Barcial Limpiado, a College Student at Polytechnic University of the Philippines Institute of Technology currently taking up Diploma in Information and Communication Technology. Inspired in having rich experience in Web design and development.
+                        <ul>
+                            <li>Age: 19 years old</li>
+                            <li>Birthday: November 11, 2000</li>
+                            <li>Location: Philippines</li>
+                        </ul>
+                    </p>
+            </div>
+            <div class="education box">
+                <h1><i class="fas fa-school"></i> EDUCATION</h1>
+                    <p>
+                        <h3>Polytechnic University of the Philippines Institute of Technology</h3>
+                        <h4>2019-PRESENT</h4>
+                        Currently a Second Year College Student. <br>
+                        <b>Honor/s:</b>
+                        <ul>
+                            <li>Dean's Lister - 1st year, 1st to 2nd Semester</li>
+                        </ul>
+                        <h3>Mount Carmel High School</h3>
+                        <h4>2013-2019</h4>
+                        Graduated with Honorable mention with a General Average of 94. <br>
+                        <b>Honor/s:</b>
+                        <ul>
+                            <li>Best in Research: <br>Title: The Level of Awareness of Using Modern Gadgets for the Development of the Academic Performances of the Senior Students of the Two(2) Different School of General Nakar Quezon</li>
+                        </ul>
+                        <h3>General Nakar Central Elementary School</h3>
+                        <h4>2007-2013</h4>
+                        Graduated with Honorable mention. <br>
+                        <b>Honor/s:</b>
+                        <ul>
+                            <li>Best in Music</li>
+                        </ul>
+                    </p>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
