--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <h3><span>WEB</span> <span>DEVELOPER</span></h3>
                     </div>
                 </div>
-                <div class="contacts">
+                <div class="contacts b1">
                     <h1><i class="fas fa-address-book"></i> CONTACTS</h1>
                     <ul>
                         <li><i class="fas fa-phone"></i> <a href="tel:+639283916354">+639 2 8391 6354</a></li>
@@ -28,22 +28,27 @@
                         <li><i class="fas fa-location-arrow"></i> Sta. Mesa, Metro Manila, Phillippines</li>
                     </ul>
                 </div>
-                <div class="skills">
+                <div class="skills b1">
                     <h1><i class="fas fa-cogs"></i> SKILLS</h1>
                     <ul>
                         <li>Web Design</li>
                         <li>Computer Programming</li>
                     </ul>
                 </div>
-                <div class="languages">
+                <div class="languages b1">
                     <h1><i class="fas fa-language"></i> LANGUAGES</h1>
                     <ul>
                         <li>Filipino</li>
                         <li>English</li>
                     </ul>
                 </div>
-                <div class="hobbies">
-                    
+                <div class="hobbies b1">
+                    <h1>HOBBIES</h1>
+                    <ul>
+                        <li>Playing Piano and Guitar</li>
+                        <li>Online Games</li>
+                        <li>Photo Editing</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -87,5 +92,8 @@
             </div>
         </div>
     </main>
+    <footer class="footer">
+        I'm at social media too!
+    </footer>
 </body>
 </html>
